MSK21QAS-15 [board] fixed board-item's holder z-index

--- a/src/app/components/board/board-item/board-item.component.less
+++ b/src/app/components/board/board-item/board-item.component.less
@@ -22,6 +22,8 @@
             bottom: 0;
             left: 0;
 
+            z-index: 1;
+
             background-color: fade(red, 5%); // TODO: Remove or rework this.
         }
 
